changed text check to isBlank()